--- a/sweezy/sweezy/Resources/Localization/en.lproj/Localizable.strings
+++ b/sweezy/sweezy/Resources/Localization/en.lproj/Localizable.strings
@@ -25,7 +25,6 @@
 "common.copy" = "Copy";
 "common.settings" = "Settings";
 "common.open" = "Open";
-"common.help" = "Help";
 
 // MARK: - Onboarding
 "onboarding.welcome" = "Welcome to Sweezy";
@@ -47,23 +46,37 @@
 "onboarding.choose_style.subtitle" = "You can change it later in Settings";
 "onboarding.skip" = "Skip";
 
-// MARK: - Dovidnyk (Guides + Checklists) Tour
-"dovidnyk.tour.step1.title" = "Guides & Checklists";
-"dovidnyk.tour.step1.message" = "Use tabs to switch between guides and checklists. Tip: you can also swipe between pages.";
-"dovidnyk.tour.step2.title" = "Filter guides";
-"dovidnyk.tour.step2.message" = "Pick a category to narrow down results. Search is available at the top.";
-"dovidnyk.tour.step3.title" = "Checklist progress";
-"dovidnyk.tour.step3.message" = "Track your overall progress and continue checklists step-by-step.";
+// MARK: - Feature Onboarding
+"onboarding.understood" = "Got it";
+"onboarding.next" = "Next";
 
-// MARK: - Settings Tour
-"settings.tour.step1.title" = "Your profile";
-"settings.tour.step1.message" = "Manage your account details and see your progress.";
-"settings.tour.step2.title" = "Language";
-"settings.tour.step2.message" = "Change the app language anytime.";
-"settings.tour.step3.title" = "Privacy";
-"settings.tour.step3.message" = "Review the privacy policy and permissions.";
-"settings.tour.step4.title" = "Data & account";
-"settings.tour.step4.message" = "Export/import data, clear cache, or delete your account.";
+// Dovidnyk
+"onboarding.dovidnyk.title" = "Your Guide";
+"onboarding.dovidnyk.description" = "Find helpful guides and checklists for life in Switzerland. Documents, housing, work — all in one place.";
+"onboarding.dovidnyk.checklists.title" = "Checklists";
+"onboarding.dovidnyk.checklists.description" = "Track your progress by checking off completed items. We'll remind you about important deadlines.";
+
+// Calculator
+"onboarding.calculator.title" = "Benefits Calculator";
+"onboarding.calculator.description" = "Calculate your potential subsidies and benefits in Switzerland. Enter your details — we'll do the math.";
+
+// Roadmap
+"onboarding.roadmap.title" = "Your Journey to the Summit";
+"onboarding.roadmap.description" = "Complete levels, finish tasks, and track your integration progress in Switzerland.";
+"onboarding.roadmap.xp.title" = "Earn XP";
+"onboarding.roadmap.xp.description" = "Get experience points for every completed task. The more you earn — the higher your level!";
+
+// Map
+"onboarding.map.title" = "Useful Places Map";
+"onboarding.map.description" = "Find nearby offices, schools, shops, and Ukrainian communities around you.";
+
+// Jobs
+"onboarding.jobs.title" = "Job Search";
+"onboarding.jobs.description" = "Current job openings for Ukrainians in Switzerland. Filter by region and industry.";
+
+// Templates
+"onboarding.templates.title" = "Document Templates";
+"onboarding.templates.description" = "Ready-to-use CV, cover letter, and official request templates in German and French.";
 
 // MARK: - Home
 "home.welcome" = "Welcome to Sweezy";
